# spopt

./: .buildinfo  .coverage  .coverage.Erins-MacBook-Pro-2.local.5506.903813  .coverage.Erins-MacBook-Pro-2.local.6156.553450  .coverage.Erins-MacBook-Pro-2.local.6638.626063  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  api.html  codecov.yml  environment.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  references.html  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_notebooks.txt  requirements_pip.txt  requirements_tests.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
.ci/: 310-DEV.yaml  310-DEV_shapely20b1.yaml  310-DEV_shapely_dev.yaml  310.yaml  311-DEV.yaml  311-DEV_shapely_dev.yaml  311.yaml  37.yaml  38-MIN.yaml  38.yaml  39-DEV.yaml  39-MIN.yaml  39.yaml
.github/: CONTRIBUTING.md  dependabot.yml  release.yml
.github/workflows/: build_docs.yml  draft-pdf.yml  release_and_publish.yml  testing.yml  unittests.yml  versioneer.yml
_modules/: index.html
_modules/spopt/locate/: coverage.html  p_center.html  p_dispersion.html  p_median.html
_modules/spopt/region/: azp.html  maxp.html  random_region.html  region_k_means.html  sa3.html  skater.html  spenc.html  ward.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
_sources/notebooks/: facloc-real-world.ipynb.txt  mclp.ipynb.txt  mclp_gis.ipynb.txt  p-center.ipynb.txt  p-dispersion.ipynb.txt  sa3.ipynb.txt  skater.ipynb.txt  ward.ipynb.txt
_static/: documentation_options.js  pysal-styles.css  references.bib
ci/: 310-latest.yaml  310-oldest.yaml  311-DEV.yaml  311-latest.yaml  311-oldest.yaml  311.yaml  312-dev.yaml  312-latest.yaml  312-oldest.yaml  313-dev.yaml  313-latest.yaml  314-dev.yaml  314-latest.yaml  36.yaml  37.yaml  38.yaml  39.yaml  py311_spopt-latest.yaml  py311_spopt-oldest.yaml  py312_spopt-latest.yaml  py313_spopt-dev.yaml  py313_spopt-latest.yaml
doc/: Makefile  api.rst  make.bat
docs/: .buildinfo  Makefile  api.html  api.rst  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  make.bat  objects.inv  references.html  search.html  searchindex.js  tutorial.html  tutorials.rst
docs/_modules/: index.html
docs/_sources/: api.rst.txt  index.rst.txt  tutorial.rst.txt
docs/_static/: pysal-styles.css  references.bib
docs/notebooks/: azp.html  azp.ipynb  facloc-disperse-real-world.ipynb  facloc-lscpb-real-world.ipynb  facloc-real-world.ipynb  lscp.ipynb  lscpb.ipynb  maxp.html  maxp.ipynb  mclp.ipynb  p-center.ipynb  p-dispersion.ipynb  p-median.ipynb  p-median_variations.ipynb  randomregion.ipynb  reg-k-means.html  reg-k-means.ipynb  skater.html  ward.html  ward.ipynb
docsrc/: Makefile  api.rst  conf.py  index.rst  tutorials.rst
docsrc/_build/doctrees/: api.doctree  index.doctree  installation.doctree  references.doctree  tutorials.doctree
docsrc/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  references.html  search.html  searchindex.js  tutorials.html
notebooks/: Untitled.ipynb  azp.html  azp.ipynb  component_policy.html  component_policy.ipynb  example.ipynb  facloc-disperse-real-world.html  facloc-disperse-real-world.ipynb  facloc-lscpb-real-world copy.ipynb  facloc-lscpb-real-world.html  facloc-lscpb-real-world.ipynb  facloc-real-world.html  facloc-real-world.ipynb  facloc.ipynb  flow.ipynb  frlm.ipynb  lscp.html  lscp.ipynb  lscp_capacity.html  lscp_capacity.ipynb  lscp_gis.html  lscp_gis.ipynb  lscpb.html  lscpb.ipynb  maxp.html  maxp.ipynb  mclp.html  mclp.ipynb  mclp_gis.html  mclp_gis.ipynb  p-center.html  p-center.ipynb  p-dispersion.html  p-dispersion.ipynb  p-dispersion_manual.ipynb  p-median.html  p-median.ipynb  p-median_variations.html  p-median_variations.ipynb  randomregion.html  (+10 more)
paper/: paper.bib  paper.md
spopt/: BaseClass.py  __init__.py  _version.py  maxp.py  region_k_means.py
spopt/locate/: __init__.py  base.py  coverage.py  disperse.py  flow.py  frlm.py  p_center.py  p_dispersion.py  p_median.py  util.py
spopt/region/: BCMaxP.py  __init__.py  azp.py  azp_util.py  base.py  components.py  csgraph_utils.py  max_p.py  maxp.py  objective_function.py  random_region.py  region_k_means.py  sa3.py  skater.py  spenc.py  util.py  ward.py
spopt/region/spenclib/: __init__.py  abstracts.py  scores.py  utils.py
spopt/route/: engine.py  heuristic.py  utils.py
spopt/tests/: conftest.py  test_azp.py  test_c_p_median.py  test_clscp-so.py  test_coverage.py  test_knearest_p_median.py  test_locate.py  test_locate_util.py  test_lscp.py  test_lscpb.py  test_maxp.py  test_mclp.py  test_p_center.py  test_p_dispersion.py  test_p_median.py  test_random_regions.py  test_region_k_means.py  test_region_util.py  test_sa3.py  test_skater.py  test_spenc.py  test_ward.py
spopt/tests/data/: SF_demand_205_centroid_uniform_weight.csv  SF_network_distance_candidateStore_16_censusTract_205_new.csv  SF_network_distance_candidateStore_16_censusTract_205_new_copy.csv  SF_store_site_16_longlat_copy.csv  ServiceAreas_4.shp  ServiceAreas_4.shx  flow_grid_network.pkl  lscp_cli2fac.pkl  lscp_geodataframe_cli2fac.pkl  lscp_geodataframe_fac2cli.pkl  lscp_objective.pkl  lscp_preselected_loc_geodataframe_fac2cli.pkl  lscpb_cli2fac.pkl  lscpb_fac2cli.pkl  lscpb_preselected_loc_geodataframe_fac2cli.pkl  mclp_cli2fac.pkl  mclp_fac2cli.pkl  mclp_geodataframe_cli2fac.pkl  mclp_geodataframe_fac2cli.pkl  mclp_geodataframe_objective.pkl  mclp_preselected_loc_geodataframe_fac2cli.pkl  model_output.json  pcenter_cli2fac.pkl  pcenter_fac2cli.pkl  pcenter_geodataframe_cli2fac.pkl  pcenter_geodataframe_fac2cli.pkl  pmedian_cli2fac.pkl  pmedian_fac2cli.pkl  pmedian_geodataframe_cli2fac.pkl  pmedian_geodataframe_objective.pkl  pmedian_objective.pkl
spopt/tests/test_locate/: test_c_p_median.py  test_clscp-so.py  test_flow.py  test_knearest_p_median.py  test_lscp.py  test_lscpb.py  test_mclp.py  test_p_center.py  test_p_dispersion.py  test_p_median.py
tools/: gitcount.ipynb
(+37 files in other folders)
